Testes Unitarios - Fernando